<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_detail_scene2"
    tools:context=".ui.detail.DetailActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_back_drop"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:contentDescription="@string/image"
                        android:scaleType="fitXY"
                        android:background="@color/colorPrimary"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        android:layout_gravity="center"
                        android:outlineSpotShadowColor="@android:color/white"
                        android:outlineAmbientShadowColor="@android:color/white">
                        <ImageView
                            android:id="@+id/image_detail"
                            android:layout_width="150dp"
                            android:layout_height="220dp"
                            android:outlineSpotShadowColor="@android:color/white"
                            android:contentDescription="@string/image"
                            android:scaleType="fitXY" />
                    </androidx.cardview.widget.CardView>


                </FrameLayout>


                <TextView
                    android:id="@+id/tv_title_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#424242"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/title"
                    android:textSize="24sp" />


                <LinearLayout
                    android:id="@+id/relative1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_release_date_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="#707070"
                        android:fontFamily="@font/poppins"
                        android:text="@string/releaseDate" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end">

                        <ImageView
                            android:id="@+id/star"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_star_24"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:id="@+id/tv_vote_avarage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginEnd="16dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/poppins_bold"
                            android:gravity="end"
                            android:text="@string/voteAverage"
                            android:textColor="#707070" />
                    </LinearLayout>
                </LinearLayout>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_line"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="#424242"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/overview" />

                <TextView
                    android:id="@+id/tv_description_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="#424242"
                    android:fontFamily="@font/poppins"
                    android:text="@string/description" />



                <TextView
                    android:id="@+id/tvOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="#424242"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/otherMovie" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvOtherMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    tools:listitem="@layout/item_other_movie" />


                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/button_round"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/share"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/CustomActionBar" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:fab_colorNormal="#FF5722"
            app:fab_colorPressed="#FF9800"/>
    </FrameLayout>
</RelativeLayout>