...
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.tvshow.TvShowsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTvShows"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/items_movies"/>

    <ProgressBar
        android:id="@+id/progress_bar"
...
